Used site to display mock-ups for client. Added and now removed those references.

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "^7.0.0",
-    "autoprefixer": "^9.1.5",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.4",
-    "browser-sync": "^2.10.0",
+    "browser-sync": "^2.26.3",
+    "browserslist": "^4.16.1",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^3.3.1",
